--- a/.github/workflows/update_bfcl.yml
+++ b/.github/workflows/update_bfcl.yml
@@ -23,10 +23,20 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-requests
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests
+
+      - name: Run tests
+        run: |
+          python -m unittest discover -s functions -p "test_*.py"
 
       - name: Run update script
         run: |
